# agentalloy

./: .containerignore  .env.apple-silicon  .env.cpu  .env.example  .env.nvidia  .env.strix-point  .gitignore  BENCHMARKS.md  Containerfile  INSTALL.md  PLAN-OF-ATTACK.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: auto-merge-gate.yml  ci.yml  container-build.yml  corpus-nightly.yml  discord-digest-relay.yml  gemini-review.yml  pr-approved.yml  pr-digest.yml  release-cut.yml
MagicMock/get_settings().ladybug_db_path/: skills.duck
automation/: cli.py  config.py  injection_guard.py  integrator.py  link_extract.py  risk_classifier.py  store.py  url_ingest.py
automation/appsscript/: README.md  newsletter-export.gs
automation/ci/: auto_merge_gate.py  discord.py  discord_relay.py  gemini_review.py  pr_approved.py  pr_digest.py
automation/config/: sources.example.yaml
automation/docs/: drive-sync-credential-setup.md
automation/routines/: evaluate-candidate.md  scan-discord-links.md  scan-newsletters.md  scheduled-drive-sync.md
container/: Containerfile.cleanroom  entrypoint.sh
docs/: code-index.md  corpus-ingest.md  fast-route-fix-spec.md  feedback-bcal-run-fixes.md  followups.md  harness-classification.md  harness-manual-smoke.md  install-pack-quality-gate-spec.md  lm-assist-design.md  operator.md  profiles-and-overrides.md  proxy-architecture.md  proxy-surfaces.md  responses-surface.md  sidecar-experience.md  skill-authoring-and-overrides-spec.md  troubleshooting.md  tuning.md  upgrade-corpus-guard-spec.md  web-ui-and-add-skill-combined-spec.md
docs/install/: harness-catalog.md
docs/plans/: 00-BATCH-PLAN.md  08-log-level.md  09-stage-b-viability.md  10-approval-gate.md  11-passthrough-telemetry.md  12-sdd-density-prose.md  13-retrieval-engine.md  14-corpus-hygiene.md  15-fragment-atomicity.md
docs/qa-contracts/: authoring-critic-model-setup-docs.md  automation-auto-merge-gate.md  automation-discord-notify.md  automation-drive-sync.md  automation-email-ingestion.md  automation-evaluator.md  automation-gemini-review.md  automation-injection-guard.md  automation-integrator-intake.md  automation-pr-digest.md  automation-risk-classifier.md  mcp-tool-trust-guardrail.md  newsletter-pipeline-efficiency.md  symbol-linked-rationale.md
docs/skill-review-history/: README.md
docs/solutions/: authoring-critic-model-setup-docs.md  automation-auto-merge-gate.md  automation-discord-notify.md  automation-drive-sync.md  automation-email-ingestion.md  automation-evaluator-four-lens.md  automation-evaluator.md  automation-gemini-review.md  automation-injection-guard.md  automation-integrator-intake.md  automation-risk-classifier.md  discord-integration-two-way-chat.md  drive-sync-blockers.md  gemma-4-critic-model-trial.md  knowledge-module.md  mcp-tool-trust-guardrail.md  phase-boundary-confirmation.md  service-mediated-corpus-ingest.md
docs/spec-contracts/: authoring-critic-model-setup-docs.spec.md  automation-auto-merge-gate.spec.md  automation-discord-notify.spec.md  automation-discord-relay.spec.md  automation-drive-sync.spec.md  automation-email-ingestion.spec.md  automation-evaluator.spec.md  automation-gemini-review.spec.md  automation-injection-guard.spec.md  automation-integrator-intake.spec.md  automation-pr-digest.spec.md  automation-risk-classifier.spec.md  compound-engineering-bridge.design.md  compound-engineering-bridge.md  compound-engineering-bridge.spec.md  install-pack-semantic-gate.design.md  install-pack-semantic-gate.md  install-pack-semantic-gate.spec.md  knowledge-module-injection.design.md  knowledge-module.design.md  knowledge-module.md  knowledge-module.spec.md  knowledge-module.uat.md  mcp-tool-trust-guardrail.spec.md  symbol-linked-rationale.md  symbol-linked-rationale.spec.md
eval/: calibrate_lm_assist.py  campaign-2026-06.md  check_corpus_regression.py  compare_runs.py  corpus_baselines.json  domain_tasks.py  external_skills.py  gold_hit.py  intent_bench.py  intent_bench_data.yaml  judge.py  judge_common.py  judge_local.py  judge_pairwise.py  regrade_compare.py  retrieval_audit.py  run_campaign.sh  run_poc.py  tasks.py
eval/contracts/: domain_10_gha_concurrency.md  domain_11_gha_caching.md  domain_12_redis_streams_workers.md  domain_13_redis_optimistic_lock.md  domain_14_snowflake_time_travel.md  domain_15_snowflake_warehouse_cost.md  domain_16_otel_trace_propagation.md  domain_17_airflow_task_hygiene.md  domain_18_redshift_table_design.md  domain_1_webhook_signature.md  domain_2_webhook_deduplication.md  domain_3_webhook_dlq.md  domain_4_webhook_versioning.md  domain_6_github_actions_oidc.md  (+4 more)
fixtures/: skill-authoring-agent.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: author_skill.py  calibrate_classifier_threshold.py  cleanroom-smoke.sh  export-corpus-to-yaml.py  gemma_critic_trial.py  gemma_critic_trial_diff.py  generate-skill-edges.py  migrate-seeds-to-packs.py  skill-edges-reasons.jsonl  v5-bringup.sh  v5-upgrade-validate.sh  verify_intake.py
tests/: _wire_compat.py  conftest.py  support.py  test_anthropic_passthrough.py  test_anthropic_router.py  test_app_logging.py  test_authoring_flow.py  test_bootstrap.py  test_bundled_corpus_integrity.py  test_card_index.py  test_check_corpus_regression.py  test_classifier_reranker.py  test_classifier_similarity.py  test_code_index_gate.py  test_code_indexer_integration.py  test_code_indexer_slug.py  test_codex_provider.py  test_codify_guards.py  test_compose_contract.py  test_compose_debug.py  test_compose_handler.py  test_compose_legs.py  test_compose_openapi.py  test_compose_telemetry.py  test_config.py  test_config_consistency.py  test_container_code_index.py  test_container_e2e.py  test_container_edge_cases.py  test_container_service.py  test_contract_init_scaffold.py  test_contracts.py  test_copilot_cli_byok_provider.py  test_copilot_cli_provider.py  test_core_imports.py  test_corpus_ingest_endpoint.py  test_corpus_reduction.py  test_corpus_write_route.py  test_cursor_session_scope.py  test_customize.py  (+93 more)
(+956 files in other folders)
