[project]
name = "agentalloy"
version = "6.4.0"
description = "AgentAlloy — just-in-time context engine for coding agents. Two context modules: phase-aware instruction composition from a curated 300+ skill corpus, and an optional per-repo code index (tree-sitter symbol graph + hybrid search). Deterministic by default, fully local. Runtime only; see agentalloy-authoring for corpus authoring."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nate Meyers" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "duckdb>=1.5.4",
    "lancedb>=0.13",
    "pyarrow>=15.0",
    "watchdog>=6.0.0",
    # codex provider writes .codex/config.toml (reads use stdlib tomllib).
    "tomli-w>=1.0",
]

[project.optional-dependencies]
# In-process cross-encoder rerank stage (RUNTIME_RERANK_MODE=onnx). Kept out
# of core deps so the bare wheel (pipx-smoke CI) stays lean; the http mode and
# disabled default need nothing here.
rerank = [
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
]
# Vendored tree-sitter parsing engine (src/agentalloy/code_index/engine/).
# Grammar list + pins mirror the upstream codebase-indexer pyproject.
code-index = [
    "tree-sitter==0.25.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.0",
    # dependency_parser.py reads pyproject/csproj manifests.
    "toml>=0.10.2",
    "defusedxml>=0.7.1",
    # docstring_format.py structured-docstring extraction.
    "docstring-parser>=0.16",
]
dev = [
    "pyjwt>=2.12.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.9",
    "pre-commit>=4.0",
    "httpx>=0.27",  # TestClient transport
    "types-pyyaml>=6.0",
]

[project.scripts]
agentalloy = "agentalloy.install.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["pytest-of-*/", "*.backup.*", "_check_*.py", "_verify_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentalloy"]
# Pack source YAMLs live INSIDE the package at src/agentalloy/_packs/ so
# hatchling ships them with the wheel automatically. Binary corpus
# (Lance + DuckDB) is no longer shipped; it's generated locally on
# first install when users pick packs via `agentalloy install-packs`.
artifacts = [
    "src/agentalloy/_corpus/.gitkeep",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["skill-source/", "fixtures/", "agents/", "agency-agents/", "vercel-labs-agent-skills/", "agent-skills/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# N818 would force every typed exception name to end with "Error"; the LM
# client exception hierarchy uses "Unavailable"/"Timeout"/"BadResponse" names
# by design (mapped to specific HTTP response codes in the contract).
ignore = ["E501", "N818", "SIM117", "N806"]

[tool.ruff.lint.per-file-ignores]
# conftest sets sys.path (so tests can import the eval/ package under
# pytest --import-mode=importlib) before its own imports run — module-level
# imports after that setup are intentional, not E402 violations.
"tests/conftest.py" = ["E402"]
# Vendored engine (see src/agentalloy/code_index/engine/VENDORED.md): keep
# upstream's style to minimize the re-vendoring diff — relax the noisy
# style-only rules; E/F correctness rules still apply.
"src/agentalloy/code_index/engine/**" = ["SIM102", "SIM105", "SIM114", "SIM118", "B905", "N815", "N817"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Query/Header/Body are the standard FastAPI default-argument idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Header"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
# Authoring subpackage is being redesigned — exclude from strict typecheck
# until the new approach lands. See the navistone fork divergence note in
# the 0875b29 merge commit (authoring kept here, removed on nrmeyers).
# The vendored tree-sitter engine (see code_index/engine/VENDORED.md) keeps
# upstream's looser typing; only the facade boundary is strict-checked.
exclude = ["src/agentalloy/authoring/**", "src/agentalloy/code_index/engine/**", "tests/**"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedFunction = false
reportPrivateUsage = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportReturnType = "warning"
reportOperatorIssue = "warning"
reportOptionalMemberAccess = "warning"
reportUnnecessaryIsInstance = "warning"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config -m 'not integration and not container and not harness_e2e' -n auto --dist loadgroup"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring a live LM Studio or other external service",
    "container: real-podman tests — slow and port-bound; excluded from the fast parallel default, run serially (`pytest -m container -n0`)",
    "harness_e2e: drives real harness binaries through a live proxy against a stub upstream; skips per-harness when the binary is absent (`pytest -m harness_e2e -n0`)",
    "xdist_group: pin a group of tests onto a single xdist worker (e.g. real :47950 binders)",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pyjwt>=2.12.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.9",
    "pre-commit>=4.0",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
    "pytest-xdist>=3.8.0",
]
